// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link component renders a variety of strings correctly empty string 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-size: 13px;
  line-height: 20px;
  font-family: 'Euclid Circular A',Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  line-height: 13px;
  color: #016BF8;
  font-weight: 400;
  -webkit-text-decoration: none!important;
  text-decoration: none!important;
}

.emotion-0:focus {
  outline: none;
}

.emotion-1 {
  position: relative;
}

.emotion-1::after {
  content: '';
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: -4px;
  left: 0;
  border-radius: 2px;
}

.constant-classname:focus .emotion-1::after {
  background-color: #0498EC;
}

.constant-classname:hover .emotion-1::after {
  background-color: #E8EDEB;
}

.emotion-2 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  position: relative;
  bottom: 4px;
  left: -1px;
  height: 12px;
}

<span
    class="constant-classname emotion-0"
  >
    <span
      class="emotion-1"
    >
      Empty string
    </span>
    <svg
      alt=""
      aria-hidden="true"
      class="emotion-2"
      height="16"
      role="presentation"
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        d="M13.823 2.4491C13.8201 2.30008 13.6999 2.17994 13.5509 2.17704L9.5062 2.09836C9.25654 2.09351 9.12821 2.39519 9.30482 2.5718L10.3856 3.65257L7.93433 6.10383C7.87964 6.15852 7.83047 6.21665 7.78683 6.27752L5.99909 8.06525C5.46457 8.59977 5.46457 9.4664 5.99909 10.0009C6.53361 10.5354 7.40023 10.5354 7.93475 10.0009L9.72249 8.21317C9.78336 8.16953 9.84148 8.12037 9.89618 8.06567L12.3474 5.61441L13.4282 6.69518C13.6048 6.87179 13.9065 6.74347 13.9016 6.4938L13.823 2.4491Z"
        fill="currentColor"
      />
      <path
        d="M7.25 3.12893C7.66421 3.12893 8 3.46472 8 3.87893C8 4.29315 7.66421 4.62893 7.25 4.62893H4C3.72386 4.62893 3.5 4.85279 3.5 5.12893V11.9929C3.5 12.2691 3.72386 12.4929 4 12.4929H10.864C11.1401 12.4929 11.364 12.2691 11.364 11.9929V8.75C11.364 8.33579 11.6998 8 12.114 8C12.5282 8 12.864 8.33579 12.864 8.75V11.9929C12.864 13.0975 11.9686 13.9929 10.864 13.9929H4C2.89543 13.9929 2 13.0975 2 11.9929V5.12893C2 4.02436 2.89543 3.12893 4 3.12893H7.25Z"
        fill="currentColor"
      />
    </svg>
  </span>
</DocumentFragment>
`;

exports[`Link component renders a variety of strings correctly external MDB docs URL 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-size: 13px;
  line-height: 20px;
  font-family: 'Euclid Circular A',Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  line-height: 13px;
  color: #016BF8;
  font-weight: 400;
  -webkit-text-decoration: none!important;
  text-decoration: none!important;
}

.emotion-0:focus {
  outline: none;
}

.emotion-1 {
  position: relative;
}

.emotion-1::after {
  content: '';
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: -4px;
  left: 0;
  border-radius: 2px;
}

.constant-classname:focus .emotion-1::after {
  background-color: #0498EC;
}

.constant-classname:hover .emotion-1::after {
  background-color: #E8EDEB;
}

<a
    class="constant-classname emotion-0"
    href="https://www.mongodb.com/docs/atlas/"
    rel="noopener noreferrer"
    target="_blank"
  >
    <span
      class="emotion-1"
    >
      MongoDB Atlas Docs
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link component renders a variety of strings correctly external MDB non-docs URL 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-size: 13px;
  line-height: 20px;
  font-family: 'Euclid Circular A',Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  line-height: 13px;
  color: #016BF8;
  font-weight: 400;
  -webkit-text-decoration: none!important;
  text-decoration: none!important;
}

.emotion-0:focus {
  outline: none;
}

.emotion-1 {
  position: relative;
}

.emotion-1::after {
  content: '';
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: -4px;
  left: 0;
  border-radius: 2px;
}

.constant-classname:focus .emotion-1::after {
  background-color: #0498EC;
}

.constant-classname:hover .emotion-1::after {
  background-color: #E8EDEB;
}

.emotion-2 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  position: relative;
  bottom: 4px;
  left: -1px;
  height: 12px;
}

<a
    class="constant-classname emotion-0"
    href="https://account.mongodb.com/account/"
    rel="noopener noreferrer"
    target="_blank"
  >
    <span
      class="emotion-1"
    >
      MongoDB Atlas Registration Page
    </span>
    <svg
      alt=""
      aria-hidden="true"
      class="emotion-2"
      height="16"
      role="presentation"
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        d="M13.823 2.4491C13.8201 2.30008 13.6999 2.17994 13.5509 2.17704L9.5062 2.09836C9.25654 2.09351 9.12821 2.39519 9.30482 2.5718L10.3856 3.65257L7.93433 6.10383C7.87964 6.15852 7.83047 6.21665 7.78683 6.27752L5.99909 8.06525C5.46457 8.59977 5.46457 9.4664 5.99909 10.0009C6.53361 10.5354 7.40023 10.5354 7.93475 10.0009L9.72249 8.21317C9.78336 8.16953 9.84148 8.12037 9.89618 8.06567L12.3474 5.61441L13.4282 6.69518C13.6048 6.87179 13.9065 6.74347 13.9016 6.4938L13.823 2.4491Z"
        fill="currentColor"
      />
      <path
        d="M7.25 3.12893C7.66421 3.12893 8 3.46472 8 3.87893C8 4.29315 7.66421 4.62893 7.25 4.62893H4C3.72386 4.62893 3.5 4.85279 3.5 5.12893V11.9929C3.5 12.2691 3.72386 12.4929 4 12.4929H10.864C11.1401 12.4929 11.364 12.2691 11.364 11.9929V8.75C11.364 8.33579 11.6998 8 12.114 8C12.5282 8 12.864 8.33579 12.864 8.75V11.9929C12.864 13.0975 11.9686 13.9929 10.864 13.9929H4C2.89543 13.9929 2 13.0975 2 11.9929V5.12893C2 4.02436 2.89543 3.12893 4 3.12893H7.25Z"
        fill="currentColor"
      />
    </svg>
  </a>
</DocumentFragment>
`;

exports[`Link component renders a variety of strings correctly external URL 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-size: 13px;
  line-height: 20px;
  font-family: 'Euclid Circular A',Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  line-height: 13px;
  color: #016BF8;
  font-weight: 400;
  -webkit-text-decoration: none!important;
  text-decoration: none!important;
}

.emotion-0:focus {
  outline: none;
}

.emotion-1 {
  position: relative;
}

.emotion-1::after {
  content: '';
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: -4px;
  left: 0;
  border-radius: 2px;
}

.constant-classname:focus .emotion-1::after {
  background-color: #0498EC;
}

.constant-classname:hover .emotion-1::after {
  background-color: #E8EDEB;
}

.emotion-2 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  position: relative;
  bottom: 4px;
  left: -1px;
  height: 12px;
}

<a
    class="constant-classname emotion-0"
    href="http://mongodb.com"
    rel="noopener noreferrer"
    target="_blank"
  >
    <span
      class="emotion-1"
    >
      MongoDB Company
    </span>
    <svg
      alt=""
      aria-hidden="true"
      class="emotion-2"
      height="16"
      role="presentation"
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        d="M13.823 2.4491C13.8201 2.30008 13.6999 2.17994 13.5509 2.17704L9.5062 2.09836C9.25654 2.09351 9.12821 2.39519 9.30482 2.5718L10.3856 3.65257L7.93433 6.10383C7.87964 6.15852 7.83047 6.21665 7.78683 6.27752L5.99909 8.06525C5.46457 8.59977 5.46457 9.4664 5.99909 10.0009C6.53361 10.5354 7.40023 10.5354 7.93475 10.0009L9.72249 8.21317C9.78336 8.16953 9.84148 8.12037 9.89618 8.06567L12.3474 5.61441L13.4282 6.69518C13.6048 6.87179 13.9065 6.74347 13.9016 6.4938L13.823 2.4491Z"
        fill="currentColor"
      />
      <path
        d="M7.25 3.12893C7.66421 3.12893 8 3.46472 8 3.87893C8 4.29315 7.66421 4.62893 7.25 4.62893H4C3.72386 4.62893 3.5 4.85279 3.5 5.12893V11.9929C3.5 12.2691 3.72386 12.4929 4 12.4929H10.864C11.1401 12.4929 11.364 12.2691 11.364 11.9929V8.75C11.364 8.33579 11.6998 8 12.114 8C12.5282 8 12.864 8.33579 12.864 8.75V11.9929C12.864 13.0975 11.9686 13.9929 10.864 13.9929H4C2.89543 13.9929 2 13.0975 2 11.9929V5.12893C2 4.02436 2.89543 3.12893 4 3.12893H7.25Z"
        fill="currentColor"
      />
    </svg>
  </a>
</DocumentFragment>
`;

exports[`Link component renders a variety of strings correctly external URL with hidden external icon 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-size: 13px;
  line-height: 20px;
  font-family: 'Euclid Circular A',Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  line-height: 13px;
  color: #016BF8;
  font-weight: 400;
  -webkit-text-decoration: none!important;
  text-decoration: none!important;
}

.emotion-0:focus {
  outline: none;
}

.emotion-1 {
  position: relative;
}

.emotion-1::after {
  content: '';
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: -4px;
  left: 0;
  border-radius: 2px;
}

.constant-classname:focus .emotion-1::after {
  background-color: #0498EC;
}

.constant-classname:hover .emotion-1::after {
  background-color: #E8EDEB;
}

<a
    class="constant-classname emotion-0"
    href="http://mongodb.com"
    rel="noopener noreferrer"
    target="_blank"
  >
    <span
      class="emotion-1"
    >
      MongoDB Company
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link component renders a variety of strings correctly external non-MDB docs URL 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-size: 13px;
  line-height: 20px;
  font-family: 'Euclid Circular A',Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  line-height: 13px;
  color: #016BF8;
  font-weight: 400;
  -webkit-text-decoration: none!important;
  text-decoration: none!important;
}

.emotion-0:focus {
  outline: none;
}

.emotion-1 {
  position: relative;
}

.emotion-1::after {
  content: '';
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: -4px;
  left: 0;
  border-radius: 2px;
}

.constant-classname:focus .emotion-1::after {
  background-color: #0498EC;
}

.constant-classname:hover .emotion-1::after {
  background-color: #E8EDEB;
}

.emotion-2 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  position: relative;
  bottom: 4px;
  left: -1px;
  height: 12px;
}

<a
    class="constant-classname emotion-0"
    href="https://safety.google/authentication/"
    rel="noopener noreferrer"
    target="_blank"
  >
    <span
      class="emotion-1"
    >
      Google 2-Step Verification
    </span>
    <svg
      alt=""
      aria-hidden="true"
      class="emotion-2"
      height="16"
      role="presentation"
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        d="M13.823 2.4491C13.8201 2.30008 13.6999 2.17994 13.5509 2.17704L9.5062 2.09836C9.25654 2.09351 9.12821 2.39519 9.30482 2.5718L10.3856 3.65257L7.93433 6.10383C7.87964 6.15852 7.83047 6.21665 7.78683 6.27752L5.99909 8.06525C5.46457 8.59977 5.46457 9.4664 5.99909 10.0009C6.53361 10.5354 7.40023 10.5354 7.93475 10.0009L9.72249 8.21317C9.78336 8.16953 9.84148 8.12037 9.89618 8.06567L12.3474 5.61441L13.4282 6.69518C13.6048 6.87179 13.9065 6.74347 13.9016 6.4938L13.823 2.4491Z"
        fill="currentColor"
      />
      <path
        d="M7.25 3.12893C7.66421 3.12893 8 3.46472 8 3.87893C8 4.29315 7.66421 4.62893 7.25 4.62893H4C3.72386 4.62893 3.5 4.85279 3.5 5.12893V11.9929C3.5 12.2691 3.72386 12.4929 4 12.4929H10.864C11.1401 12.4929 11.364 12.2691 11.364 11.9929V8.75C11.364 8.33579 11.6998 8 12.114 8C12.5282 8 12.864 8.33579 12.864 8.75V11.9929C12.864 13.0975 11.9686 13.9929 10.864 13.9929H4C2.89543 13.9929 2 13.0975 2 11.9929V5.12893C2 4.02436 2.89543 3.12893 4 3.12893H7.25Z"
        fill="currentColor"
      />
    </svg>
  </a>
</DocumentFragment>
`;

exports[`Link component renders a variety of strings correctly identfies mailto links as external urls 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-size: 13px;
  line-height: 20px;
  font-family: 'Euclid Circular A',Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  line-height: 13px;
  color: #016BF8;
  font-weight: 400;
  -webkit-text-decoration: none!important;
  text-decoration: none!important;
}

.emotion-0:focus {
  outline: none;
}

.emotion-1 {
  position: relative;
}

.emotion-1::after {
  content: '';
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: -4px;
  left: 0;
  border-radius: 2px;
}

.constant-classname:focus .emotion-1::after {
  background-color: #0498EC;
}

.constant-classname:hover .emotion-1::after {
  background-color: #E8EDEB;
}

<a
    class="constant-classname emotion-0"
    href="mailto:docs@mongodb.com"
    target="_self"
  >
    <span
      class="emotion-1"
    >
      docs@mongodb.com
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link component renders a variety of strings correctly internal link 1`] = `
<DocumentFragment>
  <a
    class="test-class"
    href="/drivers/c/"
  >
    C Driver
  </a>
</DocumentFragment>
`;

exports[`Link component renders a variety of strings correctly internal link query param 1`] = `
<DocumentFragment>
  <a
    class="test-class"
    href="/drivers/ruby/?site=drivers"
  >
    C Driver
  </a>
</DocumentFragment>
`;

exports[`Link component renders a variety of strings correctly internal link that already includes trailing slash 1`] = `
<DocumentFragment>
  <a
    class="test-class"
    href="/drivers/nodejs/#installation"
  >
    C Driver
  </a>
</DocumentFragment>
`;

exports[`Link component renders a variety of strings correctly internal link with hash 1`] = `
<DocumentFragment>
  <a
    class="test-class"
    href="/drivers/pymongo/#installation"
  >
    C Driver
  </a>
</DocumentFragment>
`;
